# aliyun-img-utils

./: CHANGES.md  CONTRIBUTING.md  MANIFEST.in  README.md  python-aliyun-img-utils.spec  python3-aliyun-img-utils.spec  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml  test.yml
aliyun_img_utils/: __init__.py  aliyun_cli.py  aliyun_exceptions.py  aliyun_image.py  aliyun_utils.py
man/: aliyun-img-utils-image-info.1  aliyun-img-utils-image-share-permission.1  aliyun-img-utils.1
man/man1/: aliyun-img-utils-image-activate.1  aliyun-img-utils-image-create.1  aliyun-img-utils-image-delete.1  aliyun-img-utils-image-deprecate.1  aliyun-img-utils-image-publish.1  aliyun-img-utils-image-replicate.1  aliyun-img-utils-image-upload.1  aliyun-img-utils-image.1
tests/: test_aliyun_image.py  test_cli.py  test_utils.py
tests/data/: default.yaml
