[bumpversion]
current_version = 0.0.1
commit = True
tag = False

[bumpversion:file:setup.py]

[bumpversion:file:aliyun_img_utils/__init__.py]

[bumpversion:file:docs/source/conf.py]

[bumpversion:file:package/python3-aliyun-img-utils.spec]

[tool:pytest]
norecursedirs = data .tox usr
testpaths = tests

[flake8]
exclude = data

[coverage:report]
fail_under = 90

[metadata]
license_file = LICENSE
