[bumpversion]
current_version = 1.4.0
commit = True
tag = False

[bumpversion:file:setup.py]

[bumpversion:file:aliyun_img_utils/__init__.py]

[bumpversion:file:python3-aliyun-img-utils.spec]

[tool:pytest]
norecursedirs = data .tox usr
testpaths = tests

[flake8]
exclude = data

[coverage:report]
fail_under = 90

[metadata]
license_file = LICENSE
